@@ -1,3 +1,7 @@
+git HEAD
+
+    * IRIS / db-iris: Add lookahead option
+
 Travel::Status::DE::IRIS 0.02 - Mon Feb 03 2014
 
     * Fix warnings when encountering unplanned (fchg-only) trains without
